--- a/2. Vanilla Javascript/05 - JavaScript References VS Copying/index-FINISHED.html
+++ b/2. Vanilla Javascript/05 - JavaScript References VS Copying/index-FINISHED.html
@@ -1,99 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>JS Reference VS Copy</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>JS Reference VS Copy</title>
+  </head>
+  <body>
+    <script>
+      // start with strings, numbers and booleans
+      let age = 100;
+      let age2 = age;
+      console.log(age, age2);
+      age = 200;
+      console.log(age, age2);
 
-  <script>
-    // start with strings, numbers and booleans
-    // let age = 100;
-    // let age2 = age;
-    // console.log(age, age2);
-    // age = 200;
-    // console.log(age, age2);
+      let name = "Wes";
+      let name2 = name;
+      console.log(name, name2);
+      name = "wesley";
+      console.log(name, name2);
 
-    // let name = 'Wes';
-    // let name2 = name;
-    // console.log(name, name2);
-    // name = 'wesley';
-    // console.log(name, name2);
+      // Let's say we have an array
+      const players = ["Wes", "Sarah", "Ryan", "Poppy"];
 
-    // Let's say we have an array
-    const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
+      // and we want to make a copy of it.
+      // You might think we can just do something like this:
+      const team = players;
 
-    // and we want to make a copy of it.
-    const team = players;
+      console.log(players, team);
 
-    console.log(players, team);
-    // You might think we can just do something like this:
-    // team[3] = 'Lux';
+      // however what happens when we update that array?
+      team[3] = "Lux";
 
-    // however what happens when we update that array?
+      // now here is the problem!
+      // oh no - we have edited the original array too!
+      console.log(players, team);
 
-    // now here is the problem!
+      // Why? It's because that is an array reference, not an array copy. They both point to the same array!
 
-    // oh no - we have edited the original array too!
+      // So, how do we fix this? We take a copy instead!
+      const team2 = players.slice();
 
-    // Why? It's because that is an array reference, not an array copy. They both point to the same array!
+      // one way
 
-    // So, how do we fix this? We take a copy instead!
-    const team2 = players.slice();
+      // or create a new array and concat the old one in
+      const team3 = [].concat(players);
 
-    // one way
+      // or use the new ES6 Spread
+      const team4 = [...players];
+      team4[3] = "heeee hawww";
+      console.log(team4);
 
-    // or create a new array and concat the old one in
-    const team3 = [].concat(players);
+      const team5 = Array.from(players);
 
-    // or use the new ES6 Spread
-    const team4 = [...players];
-    team4[3] = 'heeee hawww';
-    console.log(team4);
+      // now when we update it, the original one isn't changed
 
-    const team5 = Array.from(players);
+      // The same thing goes for objects, let's say we have a person object
 
-    // now when we update it, the original one isn't changed
+      // with Objects
+      const person = {
+        name: "Wes Bos",
+        age: 80,
+      };
 
-    // The same thing goes for objects, let's say we have a person object
+      // and think we make a copy:
+      const captain = person;
+      captain.number = 99;
 
-    // with Objects
-    const person = {
-      name: 'Wes Bos',
-      age: 80
-    };
+      // how do we take a copy instead?
+      const cap2 = Object.assign({}, person, { number: 99, age: 12 });
+      console.log(cap2);
 
-    // and think we make a copy:
-    // const captain = person;
-    // captain.number = 99;
+      // ...spread
+      const cap3 = { ...person };
 
-    // how do we take a copy instead?
-    const cap2 = Object.assign({}, person, { number: 99, age: 12 });
-    console.log(cap2);
+      // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+      const wes = {
+        name: "Simon",
+        age: 100,
+        social: {
+          twitter: "@simon",
+          facebook: "simon.temmerman",
+        },
+      };
 
-    // We will hopefully soon see the object ...spread
-    // const cap3 = {...person};
+      console.clear();
+      console.log(wes);
 
-    // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
-
-    const wes = {
-      name: 'Wes',
-      age: 100,
-      social: {
-        twitter: '@wesbos',
-        facebook: 'wesbos.developer'
-      }
-    };
-
-    console.clear();
-    console.log(wes);
-
-    const dev = Object.assign({}, wes);
-
-    const dev2 = JSON.parse(JSON.stringify(wes));
-
-
-  </script>
-
-</body>
+      const dev = Object.assign({}, wes);
+      const dev2 = JSON.parse(JSON.stringify(wes));
+    </script>
+  </body>
 </html>
