add extra step to marvel excercise

--- a/1. Vanilla Javascript/34 - Superheroes are cool/index-FINISHED.html
+++ b/1. Vanilla Javascript/34 - Superheroes are cool/index-FINISHED.html
@@ -26,6 +26,7 @@
         <section class="hero" data-hero-id=${hero.id}>
           <img src="${getImage(hero.thumbnail.path, hero.thumbnail.extension)}" />
           <span>${hero.name}</span>
+          <a href="details-START.html?id=${hero.id}">Details</a>
         </section>
         `;
       }
