--- a/1. Vanilla Javascript/34 - Superheroes are cool/index-START.html
+++ b/1. Vanilla Javascript/34 - Superheroes are cool/index-START.html
@@ -39,9 +39,14 @@
         <section class="hero" data-hero-id="1">
           <img src="http://i.annihil.us/u/prod/marvel/i/mg/3/20/5232158de5b16.jpg" />
           <span>Name</span>
+          <a target="_blank" href="details-START.html?id=1">Details</a>
         </section>
         `;
       }
+
+      //8. Create a second HTML page that shows the details of a hero
+      // use localStorage to store the results of a hero (effectivly creating a cache to minimize requests to the API). The
+      // second time the hero page is opened, go to localStorage instead of the API.
     </script>
   </body>
 </html>
