--- a/4. Javascript Classes/4. Books are food for the soul/index.html
+++ b/4. Javascript Classes/4. Books are food for the soul/index.html
@@ -81,6 +81,6 @@
       <footer class="page-footer"></footer>
     </section>
 
-    <script src="script-START.js"></script>
+    <script src="script-FINISHED.js"></script>
   </body>
 </html>
